--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "argon2": "^0.29.1",
+    "chakra-dayzed-datepicker": "^0.2.3",
+    "date-fns": "^2.29.2",
+    "dayzed": "^3.2.3",
     "framer-motion": "^6",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
