--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
+    "react-webcam": "^7.0.1",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
