--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.3.1",
+    "@prisma/client": "^4.4.0",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
@@ -33,6 +33,7 @@
     "react-icons": "^4.4.0",
     "react-query": "3.39.2",
     "react-webcam": "^7.0.1",
+    "set-interval-async": "^3.0.2",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
@@ -44,7 +45,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "prisma": "^4.3.1",
+    "prisma": "^4.4.0",
     "typescript": "4.7.4"
   },
   "ct3aMetadata": {
