--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-webcam": "^7.0.1",
     "set-interval-async": "^3.0.2",
     "superjson": "^1.9.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.18.0"
   },
   "devDependencies": {
