--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-new-window": "^0.2.1",
+    "react-mirror": "^0.4.0",
     "react-query": "3.39.2",
     "react-webcam": "^7.0.1",
     "set-interval-async": "^3.0.2",
