--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "set-interval-async": "^3.0.2",
     "superjson": "^1.9.1",
     "xlsx": "^0.18.5",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
