--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-DATABASE_URL=
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+DATABASE_URL="mongodb://root:example@localhost:27017/connectcrm?authSource=admin&directConnection=true&replicaSet=rs0"
+
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET="secret"
+
+GYM_NAME="Go"
