--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb://arnausd:Bardop23@cluster0-shard-00-00.qxnad.mongodb.net:27017,cluster0-shard-00-01.qxnad.mongodb.net:27017,cluster0-shard-00-02.qxnad.mongodb.net:27017/connectcrm?ssl=true&replicaSet=atlas-690h0k-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0&connectTimeoutMS=60000&socketTimeoutMS=60000
+DATABASE_URL="mongodb://arnausd:Bardop23@cluster0-shard-00-00.qxnad.mongodb.net:27017,cluster0-shard-00-01.qxnad.mongodb.net:27017,cluster0-shard-00-02.qxnad.mongodb.net:27017/connectcrm?ssl=true&replicaSet=atlas-690h0k-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0&connectTimeoutMS=60000&socketTimeoutMS=60000"
 NEXTAUTH_URL=http://healthandfitnessconnect.com/
 NEXTAUTH_SECRET="secret"
 
